--- a/01_FinalModelsPlan.Rmd
+++ b/01_FinalModelsPlan.Rmd
@@ -57,8 +57,8 @@ shutdown = FALSE
 report_ordinal = FALSE
 report_hurdle = TRUE
 do_priorsense = FALSE
-get_bayesfactor = FALSE
-check_models = FALSE # ! set to TRUE !
+get_bayesfactor = TRUE
+check_models = TRUE # ! set to TRUE !
 
 if (get_bayesfactor) {
   stats_to_report <- c('CI', 'SE', 'pd', 'ROPE', 'BF', 'Rhat', 'ESS')
