--- a/03_SensitivityPushingSeparate.Rmd
+++ b/03_SensitivityPushingSeparate.Rmd
@@ -55,8 +55,15 @@ system("shutdown /a")
 use_mi = FALSE
 shutdown = FALSE
 report_ordinal = FALSE
-report_hurdle = TRUE
 do_priorsense = FALSE
+get_bayesfactor = FALSE
+check_models = FALSE 
+
+if (get_bayesfactor) {
+  stats_to_report <- c('CI', 'SE', 'pd', 'ROPE', 'BF', 'Rhat', 'ESS')
+} else {
+  stats_to_report <- c('CI', 'SE', 'pd', 'ROPE', 'Rhat', 'ESS')
+}
 
 options(
   dplyr.print_max = 100, 
@@ -77,8 +84,8 @@ options(
 
 ####################### Model parameters #######################
 
-iterations = 12000 # 10'000 per chain to achieve 40'000
-warmup = 2000
+iterations = 12000 # 12'000 per chain to achieve 40'000
+warmup = 2000 # 2000
 
 # NO AR!!!
 #corstr = 'ar'
@@ -91,9 +98,8 @@ warmup = 2000
 suffix_nopushing = paste0('_sensitivityNoPushing_', as.character(iterations))
 suffix_onlypushing = paste0('_sensitivityOnlyPushing_', as.character(iterations))
 
-
-
 ```
+
 
 
 ```{r prepare_datasets, results='asis'}
@@ -230,233 +236,21 @@ model_rownames_random_ordinal <- c(model_rownames_random,'disc')
 ```{r parameters_for_printing}
 
 rows_to_pack <- list(
-  "Within-Person Effects" = c(2,10),
-  "Between-Person Effects" = c(11,17),
-  "Random Effects" = c(18, 24), 
-  "Additional Parameters" = c(25,25)
+  "Within-Person Effects" = c(2,11),
+  "Between-Person Effects" = c(12,18),
+  "Random Effects" = c(19, 25), 
+  "Additional Parameters" = c(26,26)
   )
 
 
 rows_to_pack_ordinal <- list(
-  "Intercepts" = c(1,6),
-  "Within-Person Effects" = c(2+5,10+5),
-  "Between-Person Effects" = c(11+5,17+5),
-  "Random Effects" = c(18+5, 24+5), 
-  "Additional Parameters" = c(25+5,25+6)
+  "Within-Person Effects" = c(2+5,11+5),
+  "Between-Person Effects" = c(12+5,18+5),
+  "Random Effects" = c(19+5, 25+5), 
+  "Additional Parameters" = c(26+5,26+6)
   )
 
 ```
-
-
-HURDLE MODELS
-```{r set_report_order_persuasion_hu}
-
-# For indistinguishable Dyads
-model_rows_fixed_hu <- c(
-    'Intercept', 
-    'hu_Intercept',
-    # '-- WITHIN PERSON MAIN EFFECTS --', 
-    'persuasion_self_cw', 
-    'persuasion_partner_cw', 
-    'pressure_self_cw', 
-    'pressure_partner_cw', 
-    'pushing_self_cw', 
-    'pushing_partner_cw', 
-    'day', 
-    'plan_selfPlan',
-    'plan_partnerPlan',
-    'weartime_self_cw',
-    
-    # '-- BETWEEN PERSON MAIN EFFECTS',
-    'persuasion_self_cb',
-    'persuasion_partner_cb',
-    'pressure_self_cb',
-    'pressure_partner_cb',
-    'pushing_self_cb',
-    'pushing_partner_cb',
-    'weartime_self_cb',
-    
-    # HURDLE MODEL
-    # '-- WITHIN PERSON MAIN EFFECTS --', 
-    'hu_persuasion_self_cw', 
-    'hu_persuasion_partner_cw', 
-    'hu_pressure_self_cw', 
-    'hu_pressure_partner_cw', 
-    'hu_pushing_self_cw', 
-    'hu_pushing_partner_cw', 
-    'hu_day', 
-    'hu_plan_selfPlan',
-    'hu_plan_partnerPlan',
-    'hu_weartime_self_cw',
-    
-    # '-- BETWEEN PERSON MAIN EFFECTS',
-    'hu_persuasion_self_cb',
-    'hu_persuasion_partner_cb',
-    'hu_pressure_self_cb',
-    'hu_pressure_partner_cb',
-    'hu_pushing_self_cb',
-    'hu_pushing_partner_cb',
-    'hu_weartime_self_cb'
-  )
-
-model_rows_fixed_hu_ordinal <- c(
-  model_rows_fixed_hu[1:2],
-  'Intercept[1]',
-  'Intercept[2]',
-  'Intercept[3]',
-  'Intercept[4]',
-  'Intercept[5]',
-  model_rows_fixed_hu[3:length(model_rows_fixed_hu)]
-)
-
-
-model_rows_random_hu <- c(
-  # '--------------',
-  # '-- RANDOM EFFECTS --',
-  'sd(Intercept)', 
-  'sd(hu_Intercept)',
-  'sd(persuasion_self_cw)',
-  'sd(persuasion_partner_cw)',
-  'sd(pressure_self_cw)',
-  'sd(pressure_partner_cw)',
-  'sd(pushing_self_cw)',
-  'sd(pushing_partner_cw)',
-  # HURDLE
-  'sd(hu_persuasion_self_cw)',
-  'sd(hu_persuasion_partner_cw)',
-  'sd(hu_pressure_self_cw)',
-  'sd(hu_pressure_partner_cw)',
-  'sd(hu_pushing_self_cw)',
-  'sd(hu_pushing_partner_cw)',
-  # '-- CORRELATION STRUCTURE -- ', 
-  'sigma'
-)
-
-model_rows_random_hu_ordinal <- c(model_rows_random_hu,'disc')
-
-
-```
-
-
-
-```{r set_display_names_alt_hu}
-
-# For indistinguishable Dyads
-model_rownames_fixed_hu <- c(
-    "Intercept", 
-    "Hurdle Intercept",
-    # "-- WITHIN PERSON MAIN EFFECTS --", 
-    "Daily persuasion experienced", 
-    "Daily persuasion utilized (partner's view)", # OR partner received
-    "Daily pressure experienced", 
-    "Daily pressure utilized (partner's view)", 
-    "Daily pushing experienced", 
-    "Daily pushing utilized (partner's view)", 
-    "Day", 
-    "Own actionplan",
-    'Partner actionplan', 
-    "Daily weartime",
-    
-    # "-- BETWEEN PERSON MAIN EFFECTS",
-    "Mean persuasion experienced", 
-    "Mean persuasion utilized (partner's view)", 
-    "Mean pressure experienced", 
-    "Mean pressure utilized (partner's view)", 
-    "Mean pushing experienced", 
-    "Mean pushing utilized (partner's view)", 
-    "Mean weartime",
-    
-    # HURDLE
-    # "-- WITHIN PERSON MAIN EFFECTS --", 
-    "Hu Daily persuasion experienced", 
-    "Hu Daily persuasion utilized (partner's view)", # OR partner received
-    "Hu Daily pressure experienced", 
-    "Hu Daily pressure utilized (partner's view)", 
-    "Hu Daily pushing experienced", 
-    "Hu Daily pushing utilized (partner's view)", 
-    "Hu Day", 
-    "Hu Own actionplan",
-    'Hu Partner actionplan', 
-    "Hu Daily weartime",
-    
-    # "-- BETWEEN PERSON MAIN EFFECTS",
-    "Hu Mean persuasion experienced", 
-    "Hu Mean persuasion utilized (partner's view)", 
-    "Hu Mean pressure experienced", 
-    "Hu Mean pressure utilized (partner's view)", 
-    "Hu Mean pushing experienced", 
-    "Hu Mean pushing utilized (partner's view)", 
-    "Hu Mean weartime"
-  )
-
-
-
-model_rownames_fixed_hu_ordinal <- c(
-  model_rownames_fixed_hu[1:2],
-  'Intercept[1]',
-  'Intercept[2]',
-  'Intercept[3]',
-  'Intercept[4]',
-  'Intercept[5]',
-  model_rownames_fixed_hu[3:length(model_rownames_fixed_hu)]
-)
-
-
-
-model_rownames_random_hu <- c(
-  # '--------------',
-  # '-- RANDOM EFFECTS --',
-  'sd(Intercept)', 
-  'sd(Hurdle Intercept)', 
-  "sd(Daily persuasion experienced)", 
-  "sd(Daily persuasion utilized (partner's view))", # OR partner received
-  "sd(Daily pressure experienced)", 
-  "sd(Daily pressure utilized (partner's view))", 
-  "sd(Daily pushing experienced)", 
-  "sd(Daily pushing utilized (partner's view))", 
-  
-  # Hurdle
-  "sd(Hu Daily persuasion experienced)", 
-  "sd(Hu Daily persuasion utilized (partner's view))", # OR partner received
-  "sd(Hu Daily pressure experienced)", 
-  "sd(Hu Daily pressure utilized (partner's view))", 
-  "sd(Hu Daily pushing experienced)", 
-  "sd(Hu Daily pushing utilized (partner's view))", 
-  # '-- CORRELATION STRUCTURE -- ', 
-  'sigma'
-)
-
-model_rownames_random_hu_ordinal <- c(model_rownames_random_hu,'disc')
-
-
-```
-
-
-```{r parameters_for_printing_hu}
-
-rows_to_pack_hu <- list(
-  "Conditional Within-Person Effects" = c(3,12),
-  "Conditional Between-Person Effects" = c(13,19),
-  
-  "Hurdle Within-Person Effects" = c(20,29),
-  "Hurdle Between-Person Effects" = c(30,36),
-  
-  "Random Effects" = c(37, 50), 
-  "Additional Parameters" = c(51,51)
-  )
-
-rows_to_pack_hu_ordinal <- list(
-  "Conditional Within-Person Effects" = c(3+5,12+5),
-  "Conditional Between-Person Effects" = c(13+5,19+5),
-  
-  "Hurdle Within-Person Effects" = c(20+5,29+5),
-  "Hurdle Between-Person Effects" = c(30+5,36+5),
-  
-  "Random Effects" = c(37+5, 50+5), 
-  "Additional Parameters" = c(51+5,51+6)
-  )
-```
-
 
 
 # WITHOUT PUSHING
@@ -544,43 +338,25 @@ pa_sub_digest <- digest::digest(pa_sub)
 
 ```{r report_pa_sub_lognormal, results='asis', fig.width=8, fig.height=7, dpi=300}
 
-# summarize with rope range for hurdle part
-summary_pa_sub_hurdle <- summarize_brms(
-  pa_sub, 
-  stats_to_report = c('pd','ROPE'),
-  rope_range = c(-0.18, 0.18),
-  model_rows_fixed = model_rows_fixed_hu,
-  model_rows_random = model_rows_random_hu,
-  model_rownames_fixed = model_rownames_fixed_hu,
-  model_rownames_random = model_rownames_random_hu,
-  exponentiate = T) 
-
 # rope range for continuous part of the model
 rope_factor <- sd(log(pa_sub$data$pa_sub[pa_sub$data$pa_sub > 0]))
 rope_range_continuous = c(-0.1 * rope_factor, 0.1 * rope_factor)
 
-summary_pa_sub_continuous <- summarize_brms(
+summary_pa_sub <- summarize_brms(
   pa_sub, 
-  stats_to_report = c('CI', 'SE', 'pd', 'ROPE', 'Rhat', 'ESS'),
+  stats_to_report = stats_to_report,
   rope_range = rope_range_continuous,
-  model_rows_fixed = model_rows_fixed_hu,
-  model_rows_random = model_rows_random_hu,
-  model_rownames_fixed = model_rownames_fixed_hu,
-  model_rownames_random = model_rownames_random_hu,
+  hu_rope_range = c(-0.18, 0.18),
+  model_rows_fixed = model_rows_fixed,
+  model_rows_random = model_rows_random,
+  model_rownames_fixed = model_rownames_fixed,
+  model_rownames_random = model_rownames_random,
   exponentiate = T) 
 
 
-# Replace only the ROPE and % in Rope columns for rows with 'Hu'
-summary_pa_sub <- summary_pa_sub_continuous
-
-columns_to_replace <- c("ROPE", "inside ROPE")
-
-summary_pa_sub[grepl('Hu', rownames(summary_pa_sub)), columns_to_replace] <- 
-  summary_pa_sub_hurdle[grepl('Hu', rownames(summary_pa_sub_hurdle)), columns_to_replace]
-
 # Print the updated dataframe
 summary_pa_sub %>%
-  print_df(rows_to_pack = rows_to_pack_hu)
+  print_df(rows_to_pack = rows_to_pack)
 
 
 # Plot continuous part of model
@@ -590,7 +366,9 @@ variable <- c(
   'b_persuasion_self_cw',
   'b_persuasion_partner_cw',
   'b_pressure_self_cw',
-  'b_pressure_partner_cw'
+  'b_pressure_partner_cw',
+  'b_pushing_self_cw',
+  'b_pushing_partner_cw'
 )
 
 
@@ -618,7 +396,9 @@ variable <- c(
   'b_hu_persuasion_self_cw',
   'b_hu_persuasion_partner_cw',
   'b_hu_pressure_self_cw',
-  'b_hu_pressure_partner_cw'
+  'b_hu_pressure_partner_cw',
+  'b_hu_pushing_self_cw',
+  'b_hu_pushing_partner_cw'
 )
 
 plot(
@@ -928,13 +708,6 @@ plot(
 
 
 
-conditional_spaghetti(
-  reactance_ordinal, 
-  effects = c('persuasion_self_cw', 'pressure_self_cw')
-  , group_var = 'coupleID'
-  #, n_groups = 15
-  , plot_full_range = T
-)
 
 
 ```
@@ -1052,29 +825,19 @@ plot(
 
 ```{r report_sidebyside, results = 'asis'}
 
-process_model_component <- function(obj) {
-  # Convert to string, modify, and evaluate
-  name <- deparse(substitute(obj))
-  if (report_hurdle) name <- paste0(name, '_hu')
-  if (report_ordinal) name <- paste0(name, '_ordinal')
-  return(get(name, envir = parent.frame()))
-}
-
-
-
 all_models <- report_side_by_side(
   pa_sub,
   pa_obj_log,
   mood_gauss,
-  reactance_ordinal,
+  #reactance_ordinal,
   is_reactance,
   
-  stats_to_report = c('CI', 'pd'),
+  stats_to_report = c('CI'),
   
-  model_rows_random = process_model_component(model_rows_random),
-  model_rows_fixed = process_model_component(model_rows_fixed),
-  model_rownames_random = process_model_component(model_rownames_random),
-  model_rownames_fixed = process_model_component(model_rownames_fixed)
+  model_rows_random = model_rows_random,
+  model_rows_fixed = model_rows_fixed,
+  model_rownames_random = model_rownames_random,
+  model_rownames_fixed = model_rownames_fixed
 ) 
 
 
@@ -1084,19 +847,20 @@ all_models <- report_side_by_side(
 # pretty printing
 
 summary_all_models <- all_models %>%
-  print_df(rows_to_pack = process_model_component(rows_to_pack)) %>%
+  print_df(rows_to_pack = rows_to_pack) %>%
   add_header_above(
-    c(" ", "Subjective MVPA Hurdle Lognormal" = (length(all_models) / 5),  
-      "Device-Based MVPA Log (Gaussian)" = (length(all_models) / 5), 
-      "Mood Gaussian" = (length(all_models) / 5),
-      "Reactance Ordinal" = (length(all_models) / 5),
-      "Reactance Dichotome" = (length(all_models) / 5))
+    c(" ", "Subjective MVPA Hurdle Lognormal" = 4,  
+      "Device-Based MVPA Log (Gaussian)" = 2, 
+      "Mood Gaussian" = 2,
+      #"Reactance Ordinal" = 2,
+      "Reactance Dichotome" = 2
   )
+)
 
 
 export_xlsx(
   summary_all_models, 
-  rows_to_pack = process_model_component(rows_to_pack),
+  rows_to_pack = rows_to_pack,
   file.path("Output", paste0("AllModels", suffix_nopushing, ".xlsx")), 
   merge_option = 'header', 
   simplify_2nd_row = TRUE,
@@ -1187,49 +951,35 @@ pa_sub_digest <- digest::digest(pa_sub)
 
 ```{r report_pa_sub_lognormal_pushingonly, results='asis', fig.width=8, fig.height=7, dpi=300}
 
-# summarize with rope range for hurdle part
-summary_pa_sub_hurdle <- summarize_brms(
-  pa_sub, 
-  stats_to_report = c('pd','ROPE'),
-  rope_range = c(-0.18, 0.18),
-  model_rows_fixed = model_rows_fixed_hu,
-  model_rows_random = model_rows_random_hu,
-  model_rownames_fixed = model_rownames_fixed_hu,
-  model_rownames_random = model_rownames_random_hu,
-  exponentiate = T) 
-
 # rope range for continuous part of the model
 rope_factor <- sd(log(pa_sub$data$pa_sub[pa_sub$data$pa_sub > 0]))
 rope_range_continuous = c(-0.1 * rope_factor, 0.1 * rope_factor)
 
-summary_pa_sub_continuous <- summarize_brms(
+summary_pa_sub <- summarize_brms(
   pa_sub, 
-  stats_to_report = c('CI', 'SE', 'pd', 'ROPE', 'Rhat', 'ESS'),
+  stats_to_report = stats_to_report,
   rope_range = rope_range_continuous,
-  model_rows_fixed = model_rows_fixed_hu,
-  model_rows_random = model_rows_random_hu,
-  model_rownames_fixed = model_rownames_fixed_hu,
-  model_rownames_random = model_rownames_random_hu,
+  hu_rope_range = c(-0.18, 0.18),
+  model_rows_fixed = model_rows_fixed,
+  model_rows_random = model_rows_random,
+  model_rownames_fixed = model_rownames_fixed,
+  model_rownames_random = model_rownames_random,
   exponentiate = T) 
 
 
-# Replace only the ROPE and % in Rope columns for rows with 'Hu'
-summary_pa_sub <- summary_pa_sub_continuous
-
-columns_to_replace <- c("ROPE", "inside ROPE")
-
-summary_pa_sub[grepl('Hu', rownames(summary_pa_sub)), columns_to_replace] <- 
-  summary_pa_sub_hurdle[grepl('Hu', rownames(summary_pa_sub_hurdle)), columns_to_replace]
-
 # Print the updated dataframe
 summary_pa_sub %>%
-  print_df(rows_to_pack = rows_to_pack_hu)
+  print_df(rows_to_pack = rows_to_pack)
 
 
 # Plot continuous part of model
 
 variable <- c(
   '(Intercept)',
+  'b_persuasion_self_cw',
+  'b_persuasion_partner_cw',
+  'b_pressure_self_cw',
+  'b_pressure_partner_cw',
   'b_pushing_self_cw',
   'b_pushing_partner_cw'
 )
@@ -1256,6 +1006,10 @@ plot(
 
 # Hurdle part of the model
 variable <- c(
+  'b_hu_persuasion_self_cw',
+  'b_hu_persuasion_partner_cw',
+  'b_hu_pressure_self_cw',
+  'b_hu_pressure_partner_cw',
   'b_hu_pushing_self_cw',
   'b_hu_pushing_partner_cw'
 )
@@ -1685,29 +1439,19 @@ conditional_spaghetti(
 
 ```{r report_sidebyside_pushingonly, results = 'asis'}
 
-process_model_component <- function(obj) {
-  # Convert to string, modify, and evaluate
-  name <- deparse(substitute(obj))
-  if (report_hurdle) name <- paste0(name, '_hu')
-  if (report_ordinal) name <- paste0(name, '_ordinal')
-  return(get(name, envir = parent.frame()))
-}
-
-
-
 all_models <- report_side_by_side(
   pa_sub,
   pa_obj_log,
   mood_gauss,
-  reactance_ordinal,
+  #reactance_ordinal,
   is_reactance,
   
-  stats_to_report = c('CI', 'pd'),
+  stats_to_report = c('CI'),
   
-  model_rows_random = process_model_component(model_rows_random),
-  model_rows_fixed = process_model_component(model_rows_fixed),
-  model_rownames_random = process_model_component(model_rownames_random),
-  model_rownames_fixed = process_model_component(model_rownames_fixed)
+  model_rows_random = model_rows_random,
+  model_rows_fixed = model_rows_fixed,
+  model_rownames_random = model_rownames_random,
+  model_rownames_fixed = model_rownames_fixed
 ) 
 
 
@@ -1717,19 +1461,20 @@ all_models <- report_side_by_side(
 # pretty printing
 
 summary_all_models <- all_models %>%
-  print_df(rows_to_pack = process_model_component(rows_to_pack)) %>%
+  print_df(rows_to_pack = rows_to_pack) %>%
   add_header_above(
-    c(" ", "Subjective MVPA Hurdle Lognormal" = (length(all_models) / 5),  
-      "Device-Based MVPA Log (Gaussian)" = (length(all_models) / 5), 
-      "Mood Gaussian" = (length(all_models) / 5),
-      "Reactance Ordinal" = (length(all_models) / 5),
-      "Reactance Dichotome" = (length(all_models) / 5))
+    c(" ", "Subjective MVPA Hurdle Lognormal" = 4,  
+      "Device-Based MVPA Log (Gaussian)" = 2, 
+      "Mood Gaussian" = 2,
+      #"Reactance Ordinal" = 2,
+      "Reactance Dichotome" = 2
   )
+)
 
 
 export_xlsx(
   summary_all_models, 
-  rows_to_pack = process_model_component(rows_to_pack),
+  rows_to_pack = rows_to_pack,
   file.path("Output", paste0("AllModels", suffix_onlypushing, ".xlsx")), 
   merge_option = 'header', 
   simplify_2nd_row = TRUE,
