--- a/04_SensitivityOtherCovariates.Rmd
+++ b/04_SensitivityOtherCovariates.Rmd
@@ -53,10 +53,17 @@ system("shutdown /a")
 
 # Set options for analysis
 use_mi = FALSE
-shutdown = FALSE
+shutdown = TRUE
 report_ordinal = FALSE
-report_hurdle = TRUE
 do_priorsense = FALSE
+get_bayesfactor = FALSE
+check_models = FALSE 
+
+if (get_bayesfactor) {
+  stats_to_report <- c('CI', 'SE', 'pd', 'ROPE', 'BF', 'Rhat', 'ESS')
+} else {
+  stats_to_report <- c('CI', 'SE', 'pd', 'ROPE', 'Rhat', 'ESS')
+}
 
 options(
   dplyr.print_max = 100, 
@@ -77,8 +84,8 @@ options(
 
 ####################### Model parameters #######################
 
-iterations = 12000 # 10'000 per chain to achieve 40'000
-warmup = 2000
+iterations = 12000 # 12'000 per chain to achieve 40'000
+warmup = 2000 # 2000
 
 # NO AR!!!
 #corstr = 'ar'
@@ -92,6 +99,7 @@ suffix = paste0('_sensitivityOtherCovariates_', as.character(iterations))
 
 
 ```
+
 
 
 ```{r prepare_datasets, results='asis'}
@@ -269,262 +277,6 @@ rows_to_pack_ordinal <- list(
 ```
 
 
-HURDLE MODELS
-```{r set_report_order_persuasion_hu}
-
-# For indistinguishable Dyads
-model_rows_fixed_hu <- c(
-    'Intercept', 
-    'hu_Intercept',
-    # '-- WITHIN PERSON MAIN EFFECTS --', 
-    'persuasion_self_cw', 
-    'persuasion_partner_cw', 
-    'pressure_self_cw', 
-    'pressure_partner_cw', 
-    'pushing_self_cw', 
-    'pushing_partner_cw', 
-    'plan_selfPlan',
-    'plan_partnerPlan',
-    'day', 
-    'weartime_self_cw',
-  
-    'support_self_cw',
-    'support_partner_cw',
-    'isWeekendWeekend',
-    'got_JITAI_selfJITAIreceived',
-    'skilled_supportDaysafterIntervention',
-    
-    # '-- BETWEEN PERSON MAIN EFFECTS',
-    'persuasion_self_cb',
-    'persuasion_partner_cb',
-    'pressure_self_cb',
-    'pressure_partner_cb',
-    'pushing_self_cb',
-    'pushing_partner_cb',
-    'weartime_self_cb',
-    
-    'support_self_cb',
-    'support_partner_cb',
-    'studyGroupFirst3weeksinterventions',
-    'studyGrouplast3weeksinterventions',
-    
-    # HURDLE MODEL
-    # '-- WITHIN PERSON MAIN EFFECTS --', 
-    'hu_persuasion_self_cw', 
-    'hu_persuasion_partner_cw', 
-    'hu_pressure_self_cw', 
-    'hu_pressure_partner_cw', 
-    'hu_pushing_self_cw', 
-    'hu_pushing_partner_cw', 
-    'hu_plan_selfPlan',
-    'hu_plan_partnerPlan',
-    'hu_day', 
-    'hu_weartime_self_cw',
-
-    'hu_support_self_cw',
-    'hu_support_partner_cw',
-    'hu_isWeekendWeekend',
-    'hu_got_JITAI_selfJITAIreceived',
-    'hu_skilled_supportDaysafterIntervention',
-    
-    # '-- BETWEEN PERSON MAIN EFFECTS',
-    'hu_persuasion_self_cb',
-    'hu_persuasion_partner_cb',
-    'hu_pressure_self_cb',
-    'hu_pressure_partner_cb',
-    'hu_pushing_self_cb',
-    'hu_pushing_partner_cb',
-    'hu_weartime_self_cb',
-    
-    'hu_support_self_cb',
-    'hu_support_partner_cb',
-    'hu_studyGroupFirst3weeksinterventions',
-    'hu_studyGrouplast3weeksinterventions'
-    
-  )
-
-model_rows_fixed_hu_ordinal <- c(
-  model_rows_fixed_hu[1:2],
-  'Intercept[1]',
-  'Intercept[2]',
-  'Intercept[3]',
-  'Intercept[4]',
-  'Intercept[5]',
-  model_rows_fixed_hu[3:length(model_rows_fixed_hu)]
-)
-
-
-model_rows_random_hu <- c(
-  # '--------------',
-  # '-- RANDOM EFFECTS --',
-  'sd(Intercept)', 
-  'sd(hu_Intercept)',
-  'sd(persuasion_self_cw)',
-  'sd(persuasion_partner_cw)',
-  'sd(pressure_self_cw)',
-  'sd(pressure_partner_cw)',
-  'sd(pushing_self_cw)',
-  'sd(pushing_partner_cw)',
-  # HURDLE
-  'sd(hu_persuasion_self_cw)',
-  'sd(hu_persuasion_partner_cw)',
-  'sd(hu_pressure_self_cw)',
-  'sd(hu_pressure_partner_cw)',
-  'sd(hu_pushing_self_cw)',
-  'sd(hu_pushing_partner_cw)',
-  # '-- CORRELATION STRUCTURE -- ', 
-  'sigma'
-)
-
-model_rows_random_hu_ordinal <- c(model_rows_random_hu,'disc')
-
-
-```
-
-
-
-```{r set_display_names_alt_hu}
-
-# For indistinguishable Dyads
-model_rownames_fixed_hu <- c(
-    "Intercept", 
-    "Hurdle Intercept",
-    # "-- WITHIN PERSON MAIN EFFECTS --", 
-    "Daily persuasion experienced", 
-    "Daily persuasion utilized (partner's view)", # OR partner received
-    "Daily pressure experienced", 
-    "Daily pressure utilized (partner's view)", 
-    "Daily pushing experienced", 
-    "Daily pushing utilized (partner's view)", 
-    'Own actionplan',
-    'Partner actionplan',
-    "Day", 
-    "Daily weartime",
-
-    'Daily support received',
-    "Daily support provided (partner's view)",
-    'Is a Weekend',
-    'JITAI received',
-    'Days post skilled support intervention',
-    
-    # "-- BETWEEN PERSON MAIN EFFECTS",
-    "Mean persuasion experienced", 
-    "Mean persuasion utilized (partner's view)", 
-    "Mean pressure experienced", 
-    "Mean pressure utilized (partner's view)", 
-    "Mean pushing experienced", 
-    "Mean pushing utilized (partner's view)", 
-    "Mean weartime", 
-    
-    'Mean support received',
-    "Mean support provided (partner's view)",
-    'Difference study group 2',
-    'Difference study group 3',
-    
-    # HURDLE
-    # "-- WITHIN PERSON MAIN EFFECTS --", 
-    "Hu Daily persuasion experienced", 
-    "Hu Daily persuasion utilized (partner's view)", # OR partner received
-    "Hu Daily pressure experienced", 
-    "Hu Daily pressure utilized (partner's view)", 
-    "Hu Daily pushing experienced", 
-    "Hu Daily pushing utilized (partner's view)", 
-    'Hu Own actionplan',
-    'Hu Partner actionplan',
-    "Hu Day", 
-    "Hu Daily weartime",
-
-    'Hu Daily support received',
-    "Hu Daily support provided (partner's view)",
-    'Hu Is a Weekend',
-    'Hu JITAI received',
-    'Hu Days post skilled support intervention',
-    
-    # "-- BETWEEN PERSON MAIN EFFECTS",
-    "Hu Mean persuasion experienced", 
-    "Hu Mean persuasion utilized (partner's view)", 
-    "Hu Mean pressure experienced", 
-    "Hu Mean pressure utilized (partner's view)", 
-    "Hu Mean pushing experienced", 
-    "Hu Mean pushing utilized (partner's view)", 
-    "Hu Mean weartime",
-    
-    'Hu Mean support received',
-    "Hu Mean support provided (partner's view)",
-    'Hu Difference study group 2',
-    'Hu Difference study group 3'
-  )
-
-
-
-model_rownames_fixed_hu_ordinal <- c(
-  model_rownames_fixed_hu[1:2],
-  'Intercept[1]',
-  'Intercept[2]',
-  'Intercept[3]',
-  'Intercept[4]',
-  'Intercept[5]',
-  model_rownames_fixed_hu[3:length(model_rownames_fixed_hu)]
-)
-
-
-
-model_rownames_random_hu <- c(
-  # '--------------',
-  # '-- RANDOM EFFECTS --',
-  'sd(Intercept)', 
-  'sd(Hurdle Intercept)', 
-  "sd(Daily persuasion experienced)", 
-  "sd(Daily persuasion utilized (partner's view))", # OR partner received
-  "sd(Daily pressure experienced)", 
-  "sd(Daily pressure utilized (partner's view))", 
-  "sd(Daily pushing experienced)", 
-  "sd(Daily pushing utilized (partner's view))", 
-  
-  # Hurdle
-  "sd(Hu Daily persuasion experienced)", 
-  "sd(Hu Daily persuasion utilized (partner's view))", # OR partner received
-  "sd(Hu Daily pressure experienced)", 
-  "sd(Hu Daily pressure utilized (partner's view))", 
-  "sd(Hu Daily pushing experienced)", 
-  "sd(Hu Daily pushing utilized (partner's view))", 
-  # '-- CORRELATION STRUCTURE -- ', 
-  'sigma'
-)
-
-model_rownames_random_hu_ordinal <- c(model_rownames_random_hu,'disc')
-
-
-```
-
-
-```{r parameters_for_printing_hu}
-
-rows_to_pack_hu <- list(
-  "Conditional Within-Person Effects" = c(3,17),
-  "Conditional Between-Person Effects" = c(18,28),
-  
-  "Hurdle Within-Person Effects" = c(29,43),
-  "Hurdle Between-Person Effects" = c(44,54),
-  
-  "Random Effects" = c(55, 68), 
-  "Additional Parameters" = c(69,69)
-  )
-
-rows_to_pack_hu_ordinal <- list(
-  "Conditional Within-Person Effects" = c(3+5,17+5),
-  "Conditional Between-Person Effects" = c(18+5,28+5),
-  
-  "Hurdle Within-Person Effects" = c(29+5,43+5),
-  "Hurdle Between-Person Effects" = c(44+5,54+5),
-  
-  "Random Effects" = c(55+5, 68+5), 
-  "Additional Parameters" = c(69+5,69+6)
-  )
-
-```
-
-
 
 ## Self-Reported MVPA
 
@@ -633,43 +385,25 @@ pa_sub_digest <- digest::digest(pa_sub)
 
 ```{r report_pa_sub_lognormal, results='asis', fig.width=8, fig.height=7, dpi=300}
 
-# summarize with rope range for hurdle part
-summary_pa_sub_hurdle <- summarize_brms(
-  pa_sub, 
-  stats_to_report = c('pd','ROPE'),
-  rope_range = c(-0.18, 0.18),
-  model_rows_fixed = model_rows_fixed_hu,
-  model_rows_random = model_rows_random_hu,
-  model_rownames_fixed = model_rownames_fixed_hu,
-  model_rownames_random = model_rownames_random_hu,
-  exponentiate = T) 
-
 # rope range for continuous part of the model
 rope_factor <- sd(log(pa_sub$data$pa_sub[pa_sub$data$pa_sub > 0]))
 rope_range_continuous = c(-0.1 * rope_factor, 0.1 * rope_factor)
 
-summary_pa_sub_continuous <- summarize_brms(
+summary_pa_sub <- summarize_brms(
   pa_sub, 
-  stats_to_report = c('CI', 'SE', 'pd', 'ROPE', 'Rhat', 'ESS'),
+  stats_to_report = stats_to_report,
   rope_range = rope_range_continuous,
-  model_rows_fixed = model_rows_fixed_hu,
-  model_rows_random = model_rows_random_hu,
-  model_rownames_fixed = model_rownames_fixed_hu,
-  model_rownames_random = model_rownames_random_hu,
+  hu_rope_range = c(-0.18, 0.18),
+  model_rows_fixed = model_rows_fixed,
+  model_rows_random = model_rows_random,
+  model_rownames_fixed = model_rownames_fixed,
+  model_rownames_random = model_rownames_random,
   exponentiate = T) 
 
 
-# Replace only the ROPE and % in Rope columns for rows with 'Hu'
-summary_pa_sub <- summary_pa_sub_continuous
-
-columns_to_replace <- c("ROPE", "inside ROPE")
-
-summary_pa_sub[grepl('Hu', rownames(summary_pa_sub)), columns_to_replace] <- 
-  summary_pa_sub_hurdle[grepl('Hu', rownames(summary_pa_sub_hurdle)), columns_to_replace]
-
 # Print the updated dataframe
 summary_pa_sub %>%
-  print_df(rows_to_pack = rows_to_pack_hu)
+  print_df(rows_to_pack = rows_to_pack)
 
 
 # Plot continuous part of model
@@ -724,7 +458,6 @@ plot(
   bayestestR::rope(pa_sub, parameter = variable, range = c(-0.18, 0.18), ci = 1),
   verbose = FALSE
 ) + theme_bw()
-
 
 ```
 
@@ -1057,16 +790,6 @@ plot(
 ) + theme_bw()
 
 
-
-conditional_spaghetti(
-  reactance_ordinal, 
-  effects = c('persuasion_self_cw', 'pressure_self_cw')
-  , group_var = 'coupleID'
-  #, n_groups = 15
-  , plot_full_range = T
-)
-
-
 ```
 
 
@@ -1199,31 +922,23 @@ conditional_spaghetti(
 
 # Report All Models
 
+# Report All Models
+
 ```{r report_sidebyside, results = 'asis'}
-
-process_model_component <- function(obj) {
-  # Convert to string, modify, and evaluate
-  name <- deparse(substitute(obj))
-  if (report_hurdle) name <- paste0(name, '_hu')
-  if (report_ordinal) name <- paste0(name, '_ordinal')
-  return(get(name, envir = parent.frame()))
-}
-
-
 
 all_models <- report_side_by_side(
   pa_sub,
   pa_obj_log,
   mood_gauss,
-  reactance_ordinal,
+  #reactance_ordinal,
   is_reactance,
   
-  stats_to_report = c('CI', 'pd'),
+  stats_to_report = c('CI'),
   
-  model_rows_random = process_model_component(model_rows_random),
-  model_rows_fixed = process_model_component(model_rows_fixed),
-  model_rownames_random = process_model_component(model_rownames_random),
-  model_rownames_fixed = process_model_component(model_rownames_fixed)
+  model_rows_random = model_rows_random,
+  model_rows_fixed = model_rows_fixed,
+  model_rownames_random = model_rownames_random,
+  model_rownames_fixed = model_rownames_fixed
 ) 
 
 
@@ -1233,19 +948,20 @@ all_models <- report_side_by_side(
 # pretty printing
 
 summary_all_models <- all_models %>%
-  print_df(rows_to_pack = process_model_component(rows_to_pack)) %>%
+  print_df(rows_to_pack = rows_to_pack) %>%
   add_header_above(
-    c(" ", "Subjective MVPA Hurdle Lognormal" = (length(all_models) / 5),  
-      "Device-Based MVPA Log (Gaussian)" = (length(all_models) / 5), 
-      "Mood Gaussian" = (length(all_models) / 5),
-      "Reactance Ordinal" = (length(all_models) / 5),
-      "Reactance Dichotome" = (length(all_models) / 5))
+    c(" ", "Subjective MVPA Hurdle Lognormal" = 4,  
+      "Device-Based MVPA Log (Gaussian)" = 2, 
+      "Mood Gaussian" = 2,
+      #"Reactance Ordinal" = 2,
+      "Reactance Dichotome" = 2
   )
+)
 
 
 export_xlsx(
   summary_all_models, 
-  rows_to_pack = process_model_component(rows_to_pack),
+  rows_to_pack = rows_to_pack,
   file.path("Output", paste0("AllModels", suffix, ".xlsx")), 
   merge_option = 'header', 
   simplify_2nd_row = TRUE,
