--- a/01_FinalModelsPlan.Rmd
+++ b/01_FinalModelsPlan.Rmd
@@ -284,7 +284,7 @@ formula <- bf(
     # Random effects
     (1 + persuasion_self_cw + persuasion_partner_cw +
     pressure_self_cw + pressure_partner_cw +
-    pushing_self_cw + pushing_partner_cw | coupleID),
+    pushing_self_cw + pushing_partner_cw | dd | coupleID),
   
   hu = ~ persuasion_self_cw + persuasion_partner_cw +
     pressure_self_cw + pressure_partner_cw +
@@ -300,7 +300,7 @@ formula <- bf(
     # Random effects
     (1 + persuasion_self_cw + persuasion_partner_cw +
     pressure_self_cw + pressure_partner_cw +
-    pushing_self_cw + pushing_partner_cw | coupleID)
+    pushing_self_cw + pushing_partner_cw | dd | coupleID)
   #, autocor = autocor_str
 ) 
 
