finished and fixed with qr decomp

--- a/01_FinalModelsPlan.Rmd
+++ b/01_FinalModelsPlan.Rmd
@@ -301,6 +301,8 @@ formula <- bf(
     (1 + persuasion_self_cw + persuasion_partner_cw +
     pressure_self_cw + pressure_partner_cw +
     pushing_self_cw + pushing_partner_cw | dd | coupleID)
+  
+  , decomp = 'QR'
   #, autocor = autocor_str
 ) 
 
@@ -591,6 +593,8 @@ formula <- bf(
     (persuasion_self_cw + persuasion_partner_cw +
     pressure_self_cw + pressure_partner_cw +
     pushing_self_cw + pushing_partner_cw | coupleID)
+  
+  , decomp = 'QR'
   #, autocor = autocor_str
 )
 
@@ -724,6 +728,8 @@ formula <- bf(
     (persuasion_self_cw + persuasion_partner_cw +
     pressure_self_cw + pressure_partner_cw +
     pushing_self_cw + pushing_partner_cw | coupleID)
+  
+  , decomp = 'QR'
   #, autocor = autocor_str
 )
 
@@ -861,6 +867,8 @@ formula <- bf(
     (persuasion_self_cw + persuasion_partner_cw +
     pressure_self_cw + pressure_partner_cw +
     pushing_self_cw + pushing_partner_cw | coupleID)
+  
+  , decomp = 'QR'
   #, autocor = autocor_str
 )
 
@@ -1000,6 +1008,8 @@ formula <- bf(
     (persuasion_self_cw + persuasion_partner_cw +
     pressure_self_cw + pressure_partner_cw +
     pushing_self_cw + pushing_partner_cw | coupleID)
+  
+  , decomp = 'QR'
   #, autocor = autocor_str
   )
 
