--- a/03_SensitivityPushingSeparate.Rmd
+++ b/03_SensitivityPushingSeparate.Rmd
@@ -289,6 +289,8 @@ formula <- bf(
     # Random effects
     (1 + persuasion_self_cw + persuasion_partner_cw +
     pressure_self_cw + pressure_partner_cw | dd | coupleID)
+  
+  , decomp = 'QR'
   #, autocor = autocor_str
 ) 
 
@@ -437,6 +439,8 @@ formula <- bf(
     # Random effects
     (persuasion_self_cw + persuasion_partner_cw +
     pressure_self_cw + pressure_partner_cw | coupleID)
+  
+  , decomp = 'QR'
   #, autocor = autocor_str
 )
 
@@ -540,6 +544,8 @@ formula <- bf(
     # Random effects
     (persuasion_self_cw + persuasion_partner_cw +
     pressure_self_cw + pressure_partner_cw | coupleID)
+  
+  , decomp = 'QR'
   #, autocor = autocor_str
 )
 
@@ -637,6 +643,8 @@ formula <- bf(
     # Random effects
     (persuasion_self_cw + persuasion_partner_cw +
     pressure_self_cw + pressure_partner_cw | coupleID)
+  
+  , decomp = 'QR'
   #, autocor = autocor_str
 )
 
@@ -748,6 +756,8 @@ formula <- bf(
     # Random effects
     (persuasion_self_cw + persuasion_partner_cw +
     pressure_self_cw + pressure_partner_cw | coupleID)
+  
+  , decomp = 'QR'
   #, autocor = autocor_str
   )
 
@@ -900,6 +910,8 @@ formula <- bf(
     
     # Random effects
     (1 + pushing_self_cw + pushing_partner_cw | coupleID)
+  
+  , decomp = 'QR'
   #, autocor = autocor_str
 ) 
 
@@ -1047,6 +1059,8 @@ formula <- bf(
     
     # Random effects
     (pushing_self_cw + pushing_partner_cw | coupleID)
+  
+  , decomp = 'QR'
   #, autocor = autocor_str
 )
 
@@ -1145,6 +1159,8 @@ formula <- bf(
     
     # Random effects
     (pushing_self_cw + pushing_partner_cw | coupleID)
+  
+  , decomp = 'QR'
   #, autocor = autocor_str
 )
 
@@ -1247,6 +1263,8 @@ formula <- bf(
     
     # Random effects
     (pushing_self_cw + pushing_partner_cw | coupleID)
+  
+  , decomp = 'QR'
   #, autocor = autocor_str
 )
 
@@ -1351,6 +1369,8 @@ formula <- bf(
     
     # Random effects
     (pushing_self_cw + pushing_partner_cw | coupleID)
+  
+  , decomp = 'QR'
   #, autocor = autocor_str
   )
 
