--- a/04_SensitivityExchangeProcessesCovariates.Rmd
+++ b/04_SensitivityExchangeProcessesCovariates.Rmd
@@ -335,6 +335,8 @@ formula <- bf(
     (1 + persuasion_self_cw + persuasion_partner_cw +
     pressure_self_cw + pressure_partner_cw +
     pushing_self_cw + pushing_partner_cw | dd | coupleID)
+  
+  , decomp = 'QR'
   #, autocor = autocor_str
 ) 
 
@@ -496,6 +498,8 @@ formula <- bf(
     (persuasion_self_cw + persuasion_partner_cw +
     pressure_self_cw + pressure_partner_cw +
     pushing_self_cw + pushing_partner_cw | coupleID)
+  
+  , decomp = 'QR'
   #, autocor = autocor_str
 )
 
@@ -609,6 +613,8 @@ formula <- bf(
     (persuasion_self_cw + persuasion_partner_cw +
     pressure_self_cw + pressure_partner_cw +
     pushing_self_cw + pushing_partner_cw | coupleID)
+  
+  , decomp = 'QR'
   #, autocor = autocor_str
 )
 
@@ -722,6 +728,8 @@ formula <- bf(
     (persuasion_self_cw + persuasion_partner_cw +
     pressure_self_cw + pressure_partner_cw +
     pushing_self_cw + pushing_partner_cw | coupleID)
+  
+  , decomp = 'QR'
   #, autocor = autocor_str
 )
 
@@ -840,6 +848,8 @@ formula <- bf(
     (persuasion_self_cw + persuasion_partner_cw +
     pressure_self_cw + pressure_partner_cw +
     pushing_self_cw + pushing_partner_cw | coupleID)
+  
+  , decomp = 'QR'
   #, autocor = autocor_str
   )
 
